# aster

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: capture-ci.yml  ci.yml
build-ubsan/: CTestTestfile.cmake  aster_replay  aster_sim  test_engine  test_parser  test_replay
build-ubsan2/: CTestTestfile.cmake  aster_replay  aster_sim  test_engine  test_parser  test_replay
ci/: .asan-retest  README.md  _fingerprint.txt  last_commit.txt  last_run.json  last_run_jobs.json  perf_floor_local.txt  runs.json
include/aster/: itch_parser.hpp  latency_profiler.hpp  market_maker.hpp  matching_engine.hpp  order.hpp  order_book.hpp  replay_driver.hpp  spsc_queue.hpp  tsc_clock.hpp  types.hpp
include/aster/core/: level_queue.hpp  matching_engine.hpp  matching_engine.ipp  order.hpp  order_book.hpp  order_pool.hpp  symbol_table.hpp  types.hpp
include/aster/replay/: itch.hpp  parser.hpp  profiler.hpp  replay_engine.hpp
include/aster/strategy/: analytics.hpp  backtest.hpp  mm_strategy.hpp  queue_tracker.hpp  risk_manager.hpp
include/aster/utils/: flat_hash_map.h  timestamp.h
samples/: equity.csv  test.itch
scripts/: capture_ci.sh  check_replay_golden.py  check_sanitizer_drift.py  generate_test_itch.py  perf_floor_check.py
src/: itch_parser.cpp  latency_profiler.cpp  main.cpp  market_maker.cpp  matching_engine.cpp  order_book.cpp  replay_driver.cpp  sim.cpp
src/core/: types.cpp
src/replay/: parser.cpp  replay_engine.cpp
src/strategy/: analytics.cpp  backtest.cpp  mm_strategy.cpp  risk_manager.cpp
tests/: test_ci_snapshot.py  test_cli_flag_parser.py  test_engine.cpp  test_matching.cpp  test_parser.cpp  test_replay.cpp
tests/golden/: analytics_ci.json
tools/: analyse_fill_prob.py  benchmark.sh  generate_itch.cpp  multithreaded_example.cpp
